[gd_scene load_steps=2 format=3 uid="uid://uf7xy85tm2hb"]

[ext_resource type="Script" uid="uid://3artug0el40d" path="res://scripts/tasks/subtraction-task.gd" id="1_p37xj"]

[node name="SubtractionTask" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_p37xj")

[node name="DebugBG" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0.709804, 0.862745, 0.886275, 0)

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 340.0
offset_top = 8.0
offset_right = 380.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 156.0
offset_top = 299.0
offset_right = 646.0
offset_bottom = 359.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Button1" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 3
